--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -345,3 +345,105 @@
   .consult__button-wrapper {
     text-align: center;
     width: 576px; }
+
+.portfolio__hover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: rgba(244, 24, 70, 0.8);
+  z-index: 10;
+  color: #FFF;
+  opacity: 0; }
+  .portfolio__hover-dots {
+    padding-top: 90px;
+    margin-bottom: 30px;
+    text-align: center; }
+    .portfolio__hover-dots i {
+      display: inline-block;
+      width: 19px;
+      height: 19px;
+      border-radius: 50%;
+      background: #FFF;
+      margin: 0 6px; }
+  .portfolio__hover-more {
+    font-family: 'LatoWebBold';
+    color: #FFF;
+    font-size: 30px;
+    text-align: center; }
+
+.portfolio__slide {
+  display: block;
+  border: 1px solid #403a45;
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.75);
+  margin-bottom: 60px;
+  width: 316px;
+  position: relative; }
+  .portfolio__slide:hover .portfolio__hover {
+    opacity: 1;
+    -webkit-transition: .3s all;
+    transition: .3s all; }
+  .portfolio__slide-name {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 49px;
+    background: rgba(240, 0, 58, 0.8);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    color: #FFF;
+    font-size: 18px;
+    font-family: 'LatoWebBold'; }
+
+.portfolio .item {
+  width: 318px; }
+
+.portfolio .owl-controls {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: auto;
+  width: 100%;
+  padding-top: 90px; }
+
+.portfolio .owl-prev {
+  float: left;
+  background: url(../img/arr-left.png) 0 0 no-repeat;
+  text-indent: -9000px;
+  width: 32px;
+  height: 41px;
+  position: relative;
+  left: -36px; }
+
+.portfolio .owl-next {
+  float: right;
+  background: url(../img/arr-right.png) 0 0 no-repeat;
+  text-indent: -9000px;
+  width: 32px;
+  height: 41px;
+  position: relative;
+  right: -36px; }
+
+.portfolio .owl-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.portfolio .owl-controls {
+  z-index: 1; }
+
+.portfolio .owl-wrapper-outer {
+  z-index: 5; }
