--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -36,6 +36,18 @@
 }
 
 @font-face {
+    font-family: 'LatoWebHeavy';
+    src: url('../fonts/Lato-Heavy.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/Lato-Heavy.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/Lato-Heavy.woff2') format('woff2'), /* Modern Browsers */
+         url('../fonts/Lato-Heavy.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/Lato-Heavy.ttf') format('truetype');
+    font-style: normal;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
+
+@font-face {
     font-family: 'Segoe UI';
     src: url('../fonts/segoe-ui.eot'); /* IE9 Compat Modes */
     src: url('../fonts/segoe-ui.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -48,7 +60,7 @@
 }
 
 @font-face {
-    font-family: 'Segoe UI';
+    font-family: 'Segoe UI Light';
     src: url('../fonts/segoe-ui-light.eot'); /* IE9 Compat Modes */
     src: url('../fonts/segoe-ui-light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
          url('../fonts/segoe-ui-light.woff2') format('woff2'), /* Modern Browsers */
