--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -3,7 +3,7 @@
 $red: #f92854;
 $dark: #403b46;
 .page-top {
-    background: url(../img/page-top-back.jpg) center 0 no-repeat;
+    background: url(../img/page-top-back.jpg) center 0 no-repeat fixed;
     margin-bottom: 54px;
     -webkit-background-size: cover;
     -o-background-size: cover;
@@ -56,7 +56,7 @@ $dark: #403b46;
 }
 
 .proposal {
-    background: #312c37 url(../img/parallax.jpg) center top no-repeat;
+    background: #312c37 url(../img/parallax.jpg) center center no-repeat fixed;
     min-height: 521px;
     color: #FFF;
     margin-bottom: 40px;
@@ -181,7 +181,7 @@ $dark: #403b46;
 }
 .protect {
 	min-height: 325px;
-	background: #3b3546 url(../img/protect.jpg) center 0 no-repeat;
+	background: #3b3546 url(../img/protect.jpg) center center no-repeat fixed;
 	padding-top: 50px;
 	color: #FFF;
 	margin-bottom: 75px;
