--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -754,6 +754,90 @@
   .diagram .text {
     font-size: 30px; }
 
+/********************
+ * FEATURE CAROUSEL *
+ ********************/
+.carousel-container {
+  position: relative;
+  width: 100%; }
+
+#home-carousel {
+  height: 400px;
+  width: 100%;
+  position: relative;
+  margin-bottom: 0.5em;
+  font-size: 12px;
+  font-family: Arial; }
+
+.carousel-image {
+  border: 0;
+  display: block;
+  max-width: 100%; }
+
+.carousel-feature {
+  position: absolute;
+  top: -1000px;
+  left: -1000px;
+  cursor: pointer;
+  max-width: 80%; }
+
+.carousel-feature .home-carousel-caption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #000; }
+
+.carousel-feature .home-carousel-caption p {
+  margin: 0;
+  padding: 5px;
+  font-weight: bold;
+  font-size: 12px;
+  color: white; }
+
+.tracker-summation-container {
+  position: absolute;
+  color: white;
+  right: 0px;
+  top: 230px;
+  padding: 3px;
+  margin: 3px;
+  background-color: #000; }
+
+.tracker-individual-container {
+  position: absolute;
+  color: white;
+  right: 48px;
+  top: 210px;
+  padding: 0;
+  margin: 0; }
+
+.tracker-individual-container li {
+  list-style: none; }
+
+.tracker-individual-container .tracker-individual-blip {
+  margin: 0 3px;
+  padding: 0 3px;
+  color: white;
+  text-align: center;
+  background-color: #DDD; }
+
+.tracker-individual-container .tracker-individual-blip-selected {
+  color: white;
+  font-weight: bold;
+  background-color: #000; }
+
+#carousel-left {
+  position: absolute;
+  bottom: 33px;
+  left: 220px;
+  cursor: pointer; }
+
+#carousel-right {
+  position: absolute;
+  bottom: 33px;
+  right: 220px;
+  cursor: pointer; }
+
 @media (max-width: 1240px) {
   .protect__block-name {
     font-size: 20px; }
@@ -785,7 +869,9 @@
   .consult .container {
     background: url(../img/form-1200.png) center 56px no-repeat; }
   .consult__phone {
-    left: 322px; } }
+    left: 322px; }
+  #home-carousel {
+    height: 300px; } }
 
 @media (max-width: 1023px) {
   .diagrams__num {
@@ -837,6 +923,8 @@
     max-width: 100%; } }
 
 @media (max-width: 991px) {
+  #home-carousel {
+    height: 200px; }
   .systems {
     margin-bottom: 70px; }
     .systems__block {
@@ -933,7 +1021,16 @@
   .video__slide-title {
     margin-bottom: 10px; }
   .video__text-block {
-    padding: 20px; } }
+    padding: 20px; }
+  .carousel-feature {
+    position: relative;
+    top: 0;
+    left: 0;
+    padding-top: 20px;
+    margin: auto;
+    max-width: 100%; }
+  #home-carousel {
+    height: auto; } }
 
 @media (max-width: 479px) {
   .reviews-slider .owl-prev {
