--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -858,14 +858,14 @@ width: 100%;
 }
 #carousel-left {
   position:absolute;
-  bottom:33px;
-  left:220px;
+  bottom:63px;
+  left:30px;
   cursor:pointer;
 }
 #carousel-right {
   position:absolute;
-  bottom:33px;
-  right:220px;
+  bottom:63px;
+  right:30px;
   cursor:pointer;
 }
 @media(max-width: 1240px) {
@@ -888,6 +888,18 @@ width: 100%;
 			right: -25px;
 		}
 	}
+	#carousel-left {
+  position:absolute;
+  bottom:43px;
+  left:30px;
+  cursor:pointer;
+}
+#carousel-right {
+  position:absolute;
+  bottom:43px;
+  right:30px;
+  cursor:pointer;
+}
 }
 @media(max-width: 1199px){
 	.diagrams {
@@ -987,7 +999,18 @@ width: 100%;
 	.video__slide {
 		max-width: 100%;
 	}
-	
+		#carousel-left {
+	  position:absolute;
+	  bottom:43px;
+	  left:10px;
+	  cursor:pointer;
+	}
+	#carousel-right {
+	  position:absolute;
+	  bottom:43px;
+	  right:10px;
+	  cursor:pointer;
+	}
 }
 @media(max-width: 991px) {
 	#home-carousel {
